[package]
name = "rust-tocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
libc = "0.2.155"
nix = { version = "0.29.0", features = ["socket"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
