[package]
name = "rust-tocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive", "color", "env", "help"] }
libc = "0.2.155"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
sys-info = "0.9.1"
sysctl = "0.5.5"
